# ChronoX

./: .dockerignore  .gitignore  .prototools  AGENTS.md  Cargo.toml  LICENSE  README.md  docker-compose.yml  package.json  run.sh  tsconfig.json  turbo.json  wrangler.jsonc
.github/: SUPPORT.md  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: bun-ci.yml
apps/desktop/: Cargo.toml  README.md
apps/web/: .env.example  .gitignore  Dockerfile  components.json  content-collections.ts  drizzle.config.ts  next.config.ts  package.json  tsconfig.json  tsconfig.tsbuildinfo  wrangler.jsonc
docs/: AGENT-TOOLS.md  asynchronous_ai_nle_workflow.md  chronox_definitive_implementation_blueprint.md  chronox_essential_tools_analysis.md  chronox_hard_skills.md  chronox_mvp_analysis.md  chronox_phase_1_implementation_plan.md  chronox_phase_2_implementation_plan.md  chronox_phase_5_ai_architecture.md  chronox_phase_5_implementation_plan.md  chronox_ui_ux_design.md  chronox_walkthrough_day1.md  knowledge_base_editing.md
docs/frontend/: README.md  actions.md  countries-search.md  keyframes.md
legacy/: use-assets-selection-box.ts  use-assets-selection.ts  use-element-registry.ts  use-reveal-item.ts
legacy/sections/: blending.tsx  index.tsx  transform.tsx
legacy/timeline/: use-selection-box.ts
script/: setup-rust
services/ai-worker/: Modelfile  download_models.py  evaluate_mimicry.py  (+14 more)
services/core-backend/: .gitignore  Cargo.toml  test_ai_features.py
services/core-backend/src/: main.rs
(+490 files in other folders)
