[package]
name = "chronox-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["ws", "multipart"] }
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors", "fs"] }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
rusqlite = { version = "0.31.0", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
bytes = "1.6"
uuid = { version = "1.8.0", features = ["v4"] }
